# academic-research-tool

./: .gitignore  ARCHITECTURE.md  README.md  env.example  pyproject.toml  requirements.txt
docs/: LIGHTRAG_API.md
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: app-sidebar.tsx  providers.tsx  (+1 more)
planning/: AI_RESEARCH_ASSISTANT.md  DATABASE_SCHEMA.md  MASTER_PLAN.md  README.md  tasks.json
src/: __init__.py  config.py  main.py
src/api/: __init__.py  deps.py
src/models/: __init__.py  chat.py  chunk.py  common.py  hyperion.py  knowledge.py  outline.py  project.py  research.py  source.py
src/services/: __init__.py  ak_client.py  arxiv.py  auth.py  chunker.py  core.py  crossref.py  database.py  discovery.py  grobid_client.py  hyperion_client.py  ingestion.py  intent_parser.py  multi_source_search.py  openalex.py  pdf_processor.py  pubmed.py  query_service.py  research_agent.py  semantic_scholar.py  topic_classifier.py
supabase/migrations/: 001_initial_schema.sql  002_research_assistant.sql  003_chat_messages.sql  004_library_topics.sql  005_openalex_id.sql  006_report_table.sql
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_complete_research_workflow.py  test_connectivity.py  test_full_lifecycle.py  test_full_workflow.py  test_ingestion_pipeline.py  test_library.py  test_research_flow.py  test_research_ui.py
tests/integration/: __init__.py  test_chat_workflow.py  test_hyperion_client.py  test_supabase.py
tests/unit/: __init__.py  test_intent_parser.py  test_models.py  test_pdf_downloader.py  test_semantic_scholar.py  test_topic_classifier.py
(+38 files in other folders)
